--- a/etc/omr_init.rc
+++ b/etc/omr_init.rc
@@ -4,10 +4,9 @@
 
 # Params
 ACCT=jgrover
-SFX=mathom42
-
+ENCRYPTED_FILE=~/dblist.txt.enc
 # Directories
-# OMR_HOME=/home/jgrover/omr
+OMR_HOME=/home/jgrover/Projects/OracleMultiRun
 
 OMR_BIN=$OMR_HOME/bin
 OMR_CFG=$OMR_HOME/etc
@@ -17,9 +16,11 @@ OMR_RUN=$OMR_HOME/run
 OMR_LOG=$OMR_RUN/data
 OMR_DATA=$OMR_RUN/log
 
-# files
-OMR_LIST=$OMR_CFG/omr_dblist.dat
+OMR_LDAP_HOST="ldap://oid1-prod.oit.nd.edu"
+OMR_LDAP_CONTEXT="cn=OracleContext,dc=oit,dc=nd,dc=edu"
 
-export ACCT SFX OMR_HOME OMR_BIN OMR_CFG OMR_LIB OMR_RUN OMR_LOG OMR_DATA OMR_LIST
-
+export ACCT ENCRYPTED_FILE
+export OMR_HOME OMR_BIN OMR_CFG OMR_LIB
+export OMR_RUN OMR_LOG OMR_DATA OMR_LIST
+export OMR_LDAP_HOST OMR_LDAP_BASE
 # --------------------------------------
