--- a/etc/omr_init.rc
+++ b/etc/omr_init.rc
@@ -22,5 +22,5 @@ OMR_LDAP_CONTEXT="cn=OracleContext,dc=oit,dc=nd,dc=edu"
 export ACCT ENCRYPTED_FILE
 export OMR_HOME OMR_BIN OMR_CFG OMR_LIB
 export OMR_RUN OMR_LOG OMR_DATA OMR_LIST
-export OMR_LDAP_HOST OMR_LDAP_BASE
+export OMR_LDAP_HOST OMR_LDAP_BASE OMR_LDAP_CONTEXT
 # --------------------------------------
